adicionando galeria - texto drop - revisao

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			<div class="gtco-container-2">
 				<div class="row">
 					<div class="col-md-7">
-						<h1 class="full-width h1-style">Ajude a criar uma pecuária mais sustentável</h1>
+						<h1 class="full-width h1-style">Você sabe de onde vem a carne que você come?</h1>
 						<img class="rabisco-mobile"  src="images/rabisco.svg" width="200" height="50" /> </br>
 						<p class="full-width banner-p">Registre os selos presentes nos produtos e descubra mais sobre a origem e o impacto da sua carne </p>
 						<a href="https://play.google.com/store/apps/details?id=br.mapping.app&pli=1" class="btn btn-primary btn-lg">Google Play</a> 
@@ -110,7 +110,8 @@
 			<div class="col-md-4" style="margin-bottom: 100px;" >
 				<h3 class="full-width veja-como-edit">VEJA COMO FUNCIONA</h3>
 				<h2 class="full-width veja-como-title">Um aplicativo criado para aumentar a transparência na cadeia da carne</h2>
-				<p class="full-width">Somos uma iniciativa não governamental e sem fins lucrativos, engajada em conectar sociedade e ciência para tornar o setor da carne no Brasil mais transparente e sustentável. Ao registrar os produtos em um supermercado, você passa a ser parte dessa transformação.</p>
+				<p class="full-width">Aplicativo desenvolvido pela Trase e parceiros para aumentar a transparência da cadeia da carne e estimular o consumo consciente no Brasil. Ao registrar os produtos em um supermercado, você passa a ser parte
+					dessa transformação.</p>
 			</div>
 		</div>
 	</div>
@@ -134,7 +135,7 @@
 						</div>
 						<div class="col-md-2 text-left menu-1">
 							<h2 class="full-width analise-item-title">Impacto ambiental</h2>
-							<p class="full-width display-inline">A pecuária é a principal causa do desmatamento no Brasil, e este indicador mostra a área de desmatamento na zona de compras do frigorífico.</p> 
+							<p class="full-width display-inline">A pecuária é a principal causa do desmatamento no Brasil, este indicador mostra a área desmatada e o número de focos de incêndio na zona de compras do frigorífico.</p> 
 						</div>
 				    </div>	
 					<img src="images/Line 92.svg" width="520" height="" />
@@ -185,7 +186,7 @@
 		<div class="gtco-container-4">
 			<div class="col-md-8 gtco-heading" style="margin-top: 50px;">
 				<h3 class="full-width small-title-mobile">BAIXE O APP</h3>
-				<h4 class="full-width display-inline overall-title-mobile">Comece aqui a contribuir para uma setor mais transparente</h4>
+				<h4 class="full-width display-inline overall-title-mobile">Comece já a contribuir para uma pecuária mais transparente</h4>
 			<div class="row" style="margin-top: 80px">
 				<p class="full-width btm-margin-mobile">
 					<a href="https://play.google.com/store/apps/details?id=br.mapping.app&pli=1" class="btn btn-primary btn-lg">Google Play</a> 
@@ -217,13 +218,13 @@
 	<section id="section-faq">
 		<div class="gtco-container">
 			<div class="row">
-				<h2 class="full-width overall-title-mobile">Perguntas Frequentes </h2>
+				<h2 class="full-width overall-title-mobile">Saiba mais sobre nós </h2>
 	      <div class="collapse-container">
 	      	<div class="panel-heading">
 		        <h4 class="panel-title">
 		          <a id="imgToggler" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
 		            <span class="toggler-title">
-		            	Qual é nossa meta? 
+		            	Nossa iniciativa
 		            </span>     
 		            <!-- <span class="img-change rotate-icon"> -->
 		            	<img class="img-change" src="images/plus-circle.png">
@@ -235,10 +236,10 @@
 		      <div id="collapseOne" class="panel-collapse collapse in">
 		        <div class="panel-body">
 							<p>
-								Nosso sonho é construir ferramentas que revelem de onde vem a sua comida, e, por meio de iniciativas colaborativas, melhorar a transparência das cadeias de abastecimento no Brasil e no mundo.
+								O do pasto ao prato é um aplicativo que permite ao consumidor brasileiro identificar a origem da carne bovina disponível no mercado, contribuindo para escolhas mais conscientes no momento da compra.  
 							</p>
 							<p>
-								Dispondo de mais informações, setores privados, públicos e da sociedade civil poderão desenhar ações e intervenções mais efetivas. Construiremos juntos uma cadeia de alimentos mais ética e sustentável.
+								A iniciativa é resultado de uma parceria entre <a href="https://www.trase.earth/">Trase</a>,  <a href="https://www.sei.org/">Stockholm Environment Institute</a>, <a href="https://uclouvain.be/fr/index.html">UCLouvain</a> e <a href="https://reporterbrasil.org.br/">Reporter Brasil</a>.
 							</p>
 		        </div>
 		      </div>
@@ -248,7 +249,7 @@
 		        <h4 class="panel-title">
 		          <a id="imgToggler" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
 		            <span class="toggler-title">
-		            	Por que a transparência na indústria da carne é relevante?   
+		            	Nosso sonho   
 		            </span>  
 		            <!-- <span class="img-change"> -->
 		            	<img class="img-change collapse-two" src="images/plus-circle.png">
@@ -260,7 +261,10 @@
 		      <div id="collapseTwo" class="panel-collapse collapse">
 		        <div class="panel-body">
 							<p>
-								Dispondo de mais informações, setores privados, públicos e da sociedade civil poderão desenhar ações e intervenções mais efetivas. Construiremos juntos uma cadeia de alimentos mais ética e sustentável.
+								Nosso sonho é construir ferramentas que revelam de onde vem a sua comida, e por meio de uma iniciativa participativa, melhorar a transparência das cadeias de abastecimento em todo o mundo. 
+							</p>
+							<p>
+								Dispondo de mais informações, iniciativas privadas, públicas e da sociedade civil poderão desenhar ações e intervenções que sejam mais efetivas dentro do setor. Construiremos juntos uma cadeia de alimentos mais ética e sustentável.
 							</p>
 		      	</div>
 		      </div>
@@ -271,7 +275,7 @@
 		        <h4 class="panel-title">
 		          <a id="imgToggler" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
 		            <span class="toggler-title">
-		            	Como serão usados os dados coletados?  
+		            	Base da dados inédita 
 		            </span>  
 		            <!-- <span class="img-change"> -->
 		            	<img class="img-change" src="images/plus-circle.png">
@@ -283,9 +287,12 @@
 		      <div id="collapseThree" class="panel-collapse collapse">
 		        <div class="panel-body">
 							<p>
-								Dispondo de mais informações, setores privados, públicos e da sociedade civil poderão desenhar ações e intervenções mais efetivas. Construiremos juntos uma cadeia de alimentos mais ética e sustentável.
+								Quando você utiliza o aplicativo em qualquer loja revendedora de produtos cárneos, o aplicativo conecta os municípios onde os animais foram produzidos, unidades processadoras da carne e o revendedor, mostrando o caminho do pasto ao prato. 
 							</p>
-		      	</div>
+							<p>
+								Esses dados são armazenados em um banco de dados único, publicamente disponível, e que servirá para informar iniciativas de sustentabilidade de empresas, NGOs e pesquisas em universidades.
+							</p>
+				</div>
 		      </div>
 	      </div>
 
@@ -294,7 +301,7 @@
 		        <h4 class="panel-title">
 		          <a id="imgToggler" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
 		            <span class="toggler-title">
-		            	Quem é a equipe por trás do app?
+		            	Nossa equipe
 		            </span>  
 		            <!-- <span class="img-change"> -->
 		            	<img class="img-change" src="images/plus-circle.png">
@@ -306,7 +313,127 @@
 		      <div id="collapseFour" class="panel-collapse collapse">
 		        <div class="panel-body">
 							<p>
-								Dispondo de mais informações, setores privados, públicos e da sociedade civil poderão desenhar ações e intervenções mais efetivas. Construiremos juntos uma cadeia de alimentos mais ética e sustentável.
+							<!-- EQUIPE BOX -->
+							<div class="container-block container">
+
+								<div class="responsive-container-block teamcard-container">
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/erasmus_zu_ermgasem.png" width="300" height="250">
+									</div>
+									<div class="team-card-content">
+										<p class="text-blk name">
+										Erasmus zu Ermgassen
+										</p>
+										<p class="text-blk position">
+										Co-fundador e coordenação geral
+										</p>
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/vivian_ribeiro.png" width="300" height="250">
+									</div>
+									<div class="team-card-content">
+										<p class="text-blk name">
+										Vivian Ribeiro
+										</p>
+										<p class="text-blk position">
+										Co-fundadora e coordenação técnica
+										</p>
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/tiago_reis.png" width="300" height="250">
+									</div>
+									<div class="team-card-content">
+										<p class="text-blk name">
+										Tiago Reis
+										</p>
+										<p class="text-blk position">
+										Coordenador de engajamento
+										</p>
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/wayner_maia.png" width="300" height="250">
+									</div>
+									<div class="team-card-content">
+										<p class="text-blk name">
+										Wayner Maia
+										</p>
+										<p class="text-blk position">
+										Desenvolvedor sênior
+										</p>
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/caroline_donatt.png" width="300" height="250">
+									</div>
+									<div class="team-card-content">
+										<p class="text-blk name">
+										Caroline Donatti 
+										</p>
+										<p class="text-blk position">
+										Coordenadora de comunicação
+										</p>
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/yuli_alves.png" width="300" height="250">
+									</div>
+									<div class="team-card-content">
+										<p class="text-blk name">
+										Yuli Alves
+										</p>
+										<p class="text-blk position">
+										Assistente de comunicação
+										</p>
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/mariana_oliveira.png" width="300" height="250">
+									</div>
+									<div class="team-card-content">
+										<p class="text-blk name">
+										Mariana Oliveira
+										</p>
+										<p class="text-blk position">
+										UX designer
+										</p>
+									</div>
+									</div>
+								</div>
+
+								</div>
+							</div>
+
+							<!-- EQUPE BOX END-->
+
 							</p>
 		      	</div>
 		      </div>
@@ -317,7 +444,7 @@
 		        <h4 class="panel-title">
 		          <a id="imgToggler" data-toggle="collapse" data-parent="#accordion" href="#collapseFifth">
 		            <span class="toggler-title">
-		            	Por que selecionamos esses indicadores?
+		            	Nossos parceiros
 		            </span>  
 		            <!-- <span class="img-change"> -->
 		            	<img class="img-change" src="images/plus-circle.png">
@@ -329,7 +456,59 @@
 		      <div id="collapseFifth" class="panel-collapse collapse">
 		        <div class="panel-body">
 							<p>
-								Dispondo de mais informações, setores privados, públicos e da sociedade civil poderão desenhar ações e intervenções mais efetivas. Construiremos juntos uma cadeia de alimentos mais ética e sustentável.
+								<div class="container-block container">
+
+								<div class="responsive-container-block teamcard-container">
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/imaflora.png" width="300" height="120">
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/greenpeace.png" width="300" height="120">
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/imazon.png" width="300" height="120">
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/o_mundo_que_queremos.png" width="300" height="120">
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/radar_verde.png" width="300" height="120">
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/akatu.png" width="300" height="120">
+									</div>
+									</div>
+								</div>
+								</div>
+							</div>
+
 							</p>
 		      	</div>
 		      </div>
@@ -340,7 +519,7 @@
 		        <h4 class="panel-title">
 		          <a id="imgToggler" data-toggle="collapse" data-parent="#accordion" href="#collapseSixth">
 		            <span class="toggler-title">
-		            	Todos os dados são públicos?  
+		            	Nosso financiador 
 		            </span>  
 		            <!-- <span class="img-change"> -->
 		            	<img class="img-change" src="images/plus-circle.png">
@@ -352,7 +531,16 @@
 		      <div id="collapseSixth" class="panel-collapse collapse">
 		        <div class="panel-body">
 							<p>
-								Dispondo de mais informações, setores privados, públicos e da sociedade civil poderão desenhar ações e intervenções mais efetivas. Construiremos juntos uma cadeia de alimentos mais ética e sustentável.
+								<div class="container-block container">
+
+									<div class="responsive-container-block teamcard-container">
+									<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+										<div class="team-card">
+										<div class="team-img-wrapper">
+											<img class="team-img" src="images/people_parceiros/nicfi_3.png" width="300" height="120">
+										</div>
+										</div>
+									</div>
 							</p>
 		      	</div>
 		      </div>
@@ -371,19 +559,15 @@
 			    </div>
 				<div class="row">
 					<div class="col-md-12 text-center gtco-heading-2">
-						<h4 class="full-width-desktop">Quem somos?</h4>
+						<h4 class="full-width-desktop">Entre em contato conosco</h4>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12 text-center gtco-heading">
-						<p class="block one-third-width display-inline">Somos uma iniciativa não governamental e sem fins lucrativos, engajada em conectar sociedade e ciência para tornar o setor da carne no Brasil mais transparente e sustentável</p> 
+						<p class="block one-third-width display-inline">Você pode nos contactar enviando email para dopastoaoprato@trase.earth, ou diretamente pelas nossas mídias sociais.</p> 
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-12 text-center gtco-heading">
-						<h3 class="block full-width-desktop">Siga nossa redes sociais:</h3> 
-					</div>
-
 				<div class="row">
 					<div class="col-md-12 text-center gtco-heading">
 						<a href="https://twitter.com/dopastoaoprato"><i class="icon-twitter"></i></a>
