--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12 text-center gtco-heading">
-						<p class="block one-third-width display-inline">Você pode nos contactar enviando email para dopastoaoprato@trase.earth, ou diretamente pelas nossas mídias sociais.</p> 
+						<p class="block one-third-width display-inline">Você pode nos contactar enviando email para dopastoaoprato@gmail.com, ou diretamente pelas nossas mídias sociais.</p> 
 					</div>
 				</div>
 				<div class="row">
