imaflora logo change

--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@
 									<div class="team-card">
 									<div class="team-img-wrapper">
 										<img class="team-img" src="images/people_parceiros/imaflora.png" width="300" height="90">
+										<!-- logo change -->
 									</div>
 									</div>
 								</div>
