--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 -->
 <html>
 	<head>
+		
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-ELLJZ119E3"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-ELLJZ119E3');
+		</script>
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Do pasto ao prato &mdash; juntos, aumentando a transparência da cadeia da carne no Brasil</title>
