new pictures for people and partners

--- a/index.html
+++ b/index.html
@@ -395,11 +395,11 @@
 								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
 									<div class="team-card">
 									<div class="team-img-wrapper">
-										<img class="team-img" src="images/people_parceiros/caroline_donatt.png" width="300" height="250">
+										<img class="team-img" src="images/people_parceiros/dani_marques.png" width="260" height="250">
 									</div>
 									<div class="team-card-content">
 										<p class="text-blk name">
-										Caroline Donatti 
+										Daniela Marques
 										</p>
 										<p class="text-blk position">
 										Coordenadora de comunicação
@@ -411,14 +411,14 @@
 								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
 									<div class="team-card">
 									<div class="team-img-wrapper">
-										<img class="team-img" src="images/people_parceiros/yuli_alves.png" width="300" height="250">
+										<img class="team-img" src="images/people_parceiros/andrea_garcia.png" width="260" height="250">
 									</div>
 									<div class="team-card-content">
 										<p class="text-blk name">
-										Yuli Alves
+										Andrea Garcia
 										</p>
 										<p class="text-blk position">
-										Assistente de comunicação
+										Cientista de dados 
 										</p>
 									</div>
 									</div>
@@ -518,6 +518,39 @@
 									</div>
 									</div>
 								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/genep.png" width="300" height="120">
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/logo-observatorio-ufpb.png" width="300" height="120">
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/sustentarea_logo-full-transparent.png" width="300" height="150">
+									</div>
+									</div>
+								</div>
+
+								<div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+									<div class="team-card">
+									<div class="team-img-wrapper">
+										<img class="team-img" src="images/people_parceiros/Nutrir_Marca_v01-300x200_hitpaw.com.png" width="300" height="120">
+									</div>
+									</div>
+								</div>
+
 								</div>
 							</div>
 
