removing personal name

--- a/politica_de_privacidade.html
+++ b/politica_de_privacidade.html
@@ -143,8 +143,8 @@
 								os artigos da Lei Geral de Proteção de Dados Pessoais (LGPD) no Brasil e do Regulamento Geral de Proteção de Dados 
 								(GDPR) na Europa.
 								<br><br>
-								Se tem alguma dúvida sobre o aplicativo ou nossas políticas de privacidade, não hesite em contatar a pessoa encarregada pelos dados, 
-								Vivian Ribeiro, do Stockholm Environment Institute, pelo e-mail seguinte: dopastoaoprato@trase.earth. 
+								Se tem alguma dúvida sobre o aplicativo ou nossas políticas de privacidade, não hesite em contatar nosso time, 
+								no Stockholm Environment Institute, pelo e-mail seguinte: dopastoaoprato@trase.earth. 
 								Além disso, você pode relatar uma reclamação à Autoridade Sueca para Proteção de Privacidade: 
 								Ms Lena Lindgren Schelin, Director General of the Swedish Authority for Privacy Protection 
 								Drottninggatan 29 5th Floor Box 8114 104 20 Stockholm E-mail: imy@imy.se
