--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 		gtag('config', 'G-MT9151R11G');
 		</script>
+        <!-- Meta tag -->
+		<meta name="facebook-domain-verification" content="4car1rpnactfdm9b9srymsmz27oqec" />
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
